--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,11 @@
       form {
         margin: 0;
       }
+      a {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
